# Sensor_Network

./: README.md  compress.py  node.py  recive.py  stream.py  transmit.py
Arduino/recive/: recive.ino
Arduino/transmit/: transmit.ino
Compression_Workspace/: lossless_plot.py  lossy_plot.py  plot_shoe.py
Encoding_Testing_WS/: bayes.py  data_2023051215.csv  examine.py  examine_aoi.py  examine_bayes.py  gps_sensor.py  read.py  read_w_RL.py  read_w_RL_lt.py  sim_aoi.py  snr_svm.py  t.py
Encoding_Testing_WS/Arduino/Simple/Recive/: Recive.ino
Encoding_Testing_WS/Arduino/Simple/Transmit/: Transmit.ino
Encoding_Testing_WS/Arduino/client/: client.ino
Encoding_Testing_WS/Arduino/server/: server.ino
Encoding_Testing_WS/Data/All/: day2_1.csv  farm_1.csv  farm_2.csv
Encoding_Testing_WS/Data/Bayes/: bayes_good_w_ecc.csv  day2_0.csv  day2_2.csv
Encoding_Testing_WS/Data/Farm/: farm_3.csv
Encoding_Testing_WS/Data/Stair_Data_w_byte/: good_byte_long1.csv
Encoding_Testing_WS/Data/Stairs_Data/: Good_1_Stairs.csv  good2.csv  good3.csv  good4.csv
Encoding_Testing_WS/Data/aoi/: data_2023051114.csv
Encoding_Testing_WS/model/: result0.pkl  result1.pkl  result10.pkl  result11.pkl  result12.pkl  result13.pkl  result2.pkl  result3.pkl  result4.pkl  result5.pkl  result6.pkl  result7.pkl  result8.pkl  result9.pkl
Entropy_workspace/: BER.py  entropy.py
Fading_Workspace/: isi_sim.py  multipath.py  sim_fsk_mod_demod.py  sim_lora_mod_demod.py  sync_word.py  test.py  wave.py
Hamming_WS/: ham.py  test.py
LDPC_Workspace/: ldpc.py  make_matrix.py  test.py  test_rand.py
Multi_input_FL/: funs.py  mi.lf  t.py
Multi_input_FL/src-gen/mi/: CMakeLists.txt  CompileDefinitions.txt  mi.c  mi.py  setup.py
Multi_input_FL/src-gen/node_net/: node_net.c  node_net.py  setup.py
Power_Usage_Workspace/: power_test.py
RS_Test/: RS_Test.ino
Time_Varying_Channel_WS/: Pa_SNR.py  lora_pb.py  placeholder_figs.py  prob.py  shannon.py  sim.py
